instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:4: error: '<-' expected but '=' found.
for(i=0;i<4;i++){
     ^InstructionsDrawG:4: error: illegal start of simple expression
for(i=0;i<4;i++){
       ^InstructionsDrawG:4: error: '<-' expected but ';' found.
for(i=0;i<4;i++){
           ^InstructionsDrawG:4: error: illegal start of simple pattern
for(i=0;i<4;i++){
               ^InstructionsDrawG:8: error: illegal start of simple expression
	}
        ^